--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,19 @@ web/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#expo
+mobile/node_modules/**/*
+mobile/.expo/*
+mobile/npm-debug.*
+mobile/*.jks
+mobile/*.p8
+mobile/*.p12
+mobile/*.key
+mobile/*.mobileprovision
+mobile/*.orig.*
+mobile/web-build/
+mobile/web-report/
+
+# macOS
+.DS_Store
